fsc-project/force-app/main/default/objects/LoanApplication__c/LoanApplication__c.object-meta.xml
<CustomObject>
    <label>Loan Application</label>
    <nameField>
        <label>Loan Application Name</label>
        <type>AutoNumber</type>
        <displayFormat>LOAN-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>