fsc-project/force-app/main/default/objects/LoanApplication__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>Applicant</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>LoanApplications</relationshipName>
</CustomField>