fsc-project/force-app/main/default/objects/LoanApplication__c/fields/CreditScore__c.field-meta.xml
<CustomField>
    <fullName>CreditScore__c</fullName>
    <label>Credit Score</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>