fsc-project/force-app/main/default/objects/LoanApplication__c/fields/CreditScoreFetchedAt__c.field-meta.xml
<CustomField>
    <fullName>CreditScoreFetchedAt__c</fullName>
    <label>Credit Score Fetched At</label>
    <type>DateTime</type>
</CustomField>