fsc-project/force-app/main/default/objects/LoanApplication__c/fields/DebtToIncomeRatio__c.field-meta.xml
<CustomField>
    <fullName>DebtToIncomeRatio__c</fullName>
    <label>Debt-to-Income Ratio</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>