fsc-project/force-app/main/default/objects/LoanApplication__c/fields/EligibilityDecision__c.field-meta.xml
<CustomField>
    <fullName>EligibilityDecision__c</fullName>
    <label>Eligibility Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>PENDING</fullName><label>Pending</label><default>true</default></value>
            <value><fullName>AUTO_APPROVED</fullName><label>Auto Approved</label><default>false</default></value>
            <value><fullName>MANUAL_REVIEW</fullName><label>Manual Review</label><default>false</default></value>
            <value><fullName>DECLINED</fullName><label>Declined</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>