fsc-project/force-app/main/default/objects/LoanApplication__c/fields/EligibilityEvaluatedAt__c.field-meta.xml
<CustomField>
    <fullName>EligibilityEvaluatedAt__c</fullName>
    <label>Eligibility Evaluated At</label>
    <type>DateTime</type>
</CustomField>