fsc-project/force-app/main/default/objects/LoanApplication__c/fields/LoanType__c.field-meta.xml
<CustomField>
    <fullName>LoanType__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>MORTGAGE</fullName><label>Mortgage</label><default>false</default></value>
            <value><fullName>AUTO</fullName><label>Auto</label><default>false</default></value>
            <value><fullName>PERSONAL</fullName><label>Personal</label><default>false</default></value>
            <value><fullName>HELOC</fullName><label>HELOC</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>