fsc-project/force-app/main/default/objects/LoanApplication__c/fields/MonthlyDebtPayments__c.field-meta.xml
<CustomField>
    <fullName>MonthlyDebtPayments__c</fullName>
    <label>Monthly Debt Payments</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>