fsc-project/force-app/main/default/objects/LoanApplication__c/fields/RequestedAmount__c.field-meta.xml
<CustomField>
    <fullName>RequestedAmount__c</fullName>
    <label>Requested Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>