fsc-project/force-app/main/default/objects/LoanApplication__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>DRAFT</fullName><label>Draft</label><default>true</default></value>
            <value><fullName>SUBMITTED</fullName><label>Submitted</label><default>false</default></value>
            <value><fullName>IN_REVIEW</fullName><label>In Review</label><default>false</default></value>
            <value><fullName>APPROVED</fullName><label>Approved</label><default>false</default></value>
            <value><fullName>DECLINED</fullName><label>Declined</label><default>false</default></value>
            <value><fullName>FUNDED</fullName><label>Funded</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>